--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "a simple authorization demo",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "db:migrate": "knex migrate:latest --knexfile ./db/config.js"
   },
   "keywords": [],
   "author": "",
@@ -11,11 +12,12 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
+    "knex": "^0.16.3",
+    "pg": "^7.8.0",
     "pug": "^2.0.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
-  "devDependencies": {
-    "pg": "^7.8.0"
-  }
+  "devDependencies": {}
 }
