--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "a simple authorization demo",
   "scripts": {
     "start": "node server.js",
-    "db:rollback":"knex migrate:rollback --knexfile ./db/config.js",
+    "dev": "nodemon server.js",
+    "db:rollback": "knex migrate:rollback --knexfile ./db/config.js",
     "db:migrate": "knex migrate:latest --knexfile ./db/config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.4",
+    "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
@@ -20,5 +23,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^1.18.9"
+  }
 }
