--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "knex": "knex --knexfile ./db/config.js",
     "db:rollback": "knex migrate:rollback --knexfile ./db/config.js",
-    "db:migrate": "knex migrate:latest --knexfile ./db/config.js"
+    "db:migrate": "knex migrate:latest --knexfile ./db/config.js",
+    "heroku-postbuild": "knex migrate:rollback' --knexfile ./db/config.js; knex migrate:latest --knexfile ./db/config.js;"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +24,11 @@
     "pg": "^7.8.0",
     "pug": "^2.0.3",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "winston": "^3.2.1"
+  },
+  "engines":{
+    "node": "v9.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
