--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "knex": "knex",
-    "db:rollback": "knex migrate:rollback --knexfile ./db/config.js",
-    "db:migrate": "knex migrate:latest --knexfile ./db/config.js",
-    "heroku-postbuild": "knex migrate:rollback --knexfile ./db/config.js; knex migrate:latest --knexfile ./db/config.js;"
+    "db:rollback": "knex migrate:rollback",
+    "db:migrate": "knex migrate:latest",
+    "heroku-postbuild": "knex migrate:rollback; knex migrate:latest;"
   },
   "keywords": [],
   "author": "",
