--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -27,7 +28,7 @@
     "react-dom": "^16.7.0",
     "winston": "^3.2.1"
   },
-  "engines":{
+  "engines": {
     "node": "v9.0.0"
   },
   "devDependencies": {
