--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "connect-pg-simple": "^5.0.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
