--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "test": "mocha --config ./mocharc.json tests/" ,
     "knex": "knex",
     "db:rollback": "knex migrate:rollback",
     "db:migrate": "knex migrate:latest",
@@ -17,6 +18,7 @@
     "bcrypt": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "chai-http": "^4.2.1",
     "connect-pg-simple": "^5.0.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -33,7 +35,11 @@
     "node": "v9.0.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.0.0",
+    "node-mocks-http": "^1.7.3",
     "nodemon": "^1.18.9",
+    "supertest": "^3.4.2",
     "uuid": "^3.3.2"
   }
 }
